{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 1986,
  "lineage": "03076c13-9980-0689-ff7d-591320b3c195",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "wordpress-backend-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/regions/us-central1/instanceGroups/example-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-09-05T07:38:04.814-07:00",
            "enable_cdn": false,
            "fingerprint": "1AXGfE7UgA4=",
            "generated_id": 6731743271122011043,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/httpHealthChecks/wordpress-health-check"
            ],
            "id": "projects/indigo-charge-316314/global/backendServices/wordpress-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "wordpress-backend-service",
            "port_name": "http",
            "project": "indigo-charge-316314",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/backendServices/wordpress-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_http_health_check.http",
            "google_compute_instance_template.example_instance_template",
            "google_compute_network.vpc_network",
            "google_compute_region_instance_group_manager.example_instance_group",
            "google_compute_subnetwork.private_subnet_1",
            "google_service_networking_connection.default",
            "google_sql_database.database",
            "google_sql_database_instance.main",
            "google_sql_user.users",
            "random_id.db_name_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-05T07:27:24.979-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/indigo-charge-316314/global/firewalls/allow-iap",
            "log_config": [],
            "name": "allow-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "indigo-charge-316314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/firewalls/allow-iap",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "wordpress"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-05T07:27:24.992-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/indigo-charge-316314/global/firewalls/sql",
            "log_config": [],
            "name": "sql",
            "network": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "indigo-charge-316314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/firewalls/sql",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "wordpress"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "wordpress_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-05T07:27:25.034-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/indigo-charge-316314/global/firewalls/wordpress-firewall",
            "log_config": [],
            "name": "wordpress-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "indigo-charge-316314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/firewalls/wordpress-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "wordpress"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.80.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-09-05T07:27:24.894-07:00",
            "id": "projects/indigo-charge-316314/global/addresses/private-ip-address",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/networks/my-vpc-network",
            "prefix_length": 16,
            "project": "indigo-charge-316314",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/addresses/private-ip-address"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "wordpress-http-forwarding-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/indigo-charge-316314/global/forwardingRules/wordpress-http-forwarding-rule",
            "ip_address": "34.111.176.104",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "wordpress-http-forwarding-rule",
            "port_range": "80-80",
            "project": "indigo-charge-316314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/forwardingRules/wordpress-http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/targetHttpProxies/wordpress-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.wordpress-backend-service",
            "google_compute_global_address.private_ip_address",
            "google_compute_http_health_check.http",
            "google_compute_instance_template.example_instance_template",
            "google_compute_network.vpc_network",
            "google_compute_region_instance_group_manager.example_instance_group",
            "google_compute_subnetwork.private_subnet_1",
            "google_compute_target_http_proxy.wordpress-http-proxy",
            "google_compute_url_map.wordpress-url-map",
            "google_service_networking_connection.default",
            "google_sql_database.database",
            "google_sql_database_instance.main",
            "google_sql_user.users",
            "random_id.db_name_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/indigo-charge-316314/global/networks/my-vpc-network",
            "mtu": 0,
            "name": "my-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "indigo-charge-316314",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/networks/my-vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-05T07:27:25.635-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/indigo-charge-316314/regions/us-central1/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/networks/my-vpc-network",
            "project": "indigo-charge-316314",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/regions/us-central1/routers/my-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "cloudnat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "indigo-charge-316314/us-central1/my-router/testcloudnat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "testcloudnat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "indigo-charge-316314",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-05T07:27:25.720-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/indigo-charge-316314/regions/us-central1/subnetworks/private-subnet-1",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "indigo-charge-316314",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/regions/us-central1/subnetworks/private-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-05T07:27:25.712-07:00",
            "gateway_address": "10.0.4.1",
            "id": "projects/indigo-charge-316314/regions/us-central1/subnetworks/private-subnet-2",
            "ip_cidr_range": "10.0.4.0/24",
            "name": "private-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "indigo-charge-316314",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/regions/us-central1/subnetworks/private-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-05T07:27:25.148-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/indigo-charge-316314/regions/us-central1/subnetworks/public-subnet-1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "indigo-charge-316314",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/regions/us-central1/subnetworks/public-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-05T07:27:25.716-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/indigo-charge-316314/regions/us-central1/subnetworks/public-subnet-2",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "public-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "indigo-charge-316314",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/regions/us-central1/subnetworks/public-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "wordpress-http-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-05T07:38:39.718-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/indigo-charge-316314/global/targetHttpProxies/wordpress-http-proxy",
            "name": "wordpress-http-proxy",
            "project": "indigo-charge-316314",
            "proxy_bind": false,
            "proxy_id": 2278380115276235648,
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/targetHttpProxies/wordpress-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/urlMaps/wordpress-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.wordpress-backend-service",
            "google_compute_global_address.private_ip_address",
            "google_compute_http_health_check.http",
            "google_compute_instance_template.example_instance_template",
            "google_compute_network.vpc_network",
            "google_compute_region_instance_group_manager.example_instance_group",
            "google_compute_subnetwork.private_subnet_1",
            "google_compute_url_map.wordpress-url-map",
            "google_service_networking_connection.default",
            "google_sql_database.database",
            "google_sql_database_instance.main",
            "google_sql_user.users",
            "random_id.db_name_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "wordpress-url-map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-05T07:38:27.508-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/backendServices/wordpress-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "I47hXhrRU14=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/indigo-charge-316314/global/urlMaps/wordpress-url-map",
            "map_id": 8199355758196458380,
            "name": "wordpress-url-map",
            "path_matcher": [],
            "project": "indigo-charge-316314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/indigo-charge-316314/global/urlMaps/wordpress-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.wordpress-backend-service",
            "google_compute_global_address.private_ip_address",
            "google_compute_http_health_check.http",
            "google_compute_instance_template.example_instance_template",
            "google_compute_network.vpc_network",
            "google_compute_region_instance_group_manager.example_instance_group",
            "google_compute_subnetwork.private_subnet_1",
            "google_service_networking_connection.default",
            "google_sql_database.database",
            "google_sql_database_instance.main",
            "google_sql_user.users",
            "random_id.db_name_suffix"
          ]
        }
      ]
    }
  ]
}